# rag

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml  config_backup.yaml
data/eval/: eval.txt
indexes/: test_faiss.index
indexes/eval/: eval_bm25.pkl  eval_faiss.index  eval_faiss.index.meta.json
indexes/test/: test_bm25.pkl  test_faiss.index  test_faiss.index.meta.json
scripts/: build_index.py  query.py
src/chains/: rag_chain.py
src/embeddings/: embedding.py  embedding_test.py
src/llms/: llm_api.py
src/loaders/: loader.py
src/query_rewrite/: rewrite.py
src/retriever/: retriever.py
src/splitters/: splitter.py
src/vectordb/: vectordb.py
src/webui/: app.py
tests/: answer_eval.jsonl  eval_rag.py  retrieval_eval.jsonl  test_basic.py  test_pipeline.py
webui/: app.py
