
[project]
name = "rag"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "google-genai>=1.24.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "openai>=1.108.1",
    "streamlit>=1.24.1",
    "pyyaml>=6.0",
    "rank_bm25>=0.2.1",
    "jieba>=0.42.1",
    "nltk>=3.8.1"
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
